syntax = "proto3";

option csharp_namespace = "Classroom";

package classroom;

service Classroom {
  rpc GetClassroom (ClassroomRequest) returns (ClassroomReply);
}

message ClassroomRequest {
  int32 id = 1;
}

message ClassroomReply {
  int32 id = 1;
  string name = 2;
  string description = 3;
}
